added some styles

--- a/markup/homey-agency-personal(without-autorization).html
+++ b/markup/homey-agency-personal(without-autorization).html
@@ -287,12 +287,12 @@
                             <h4>Оцените агентство:</h4>
                             <ul class="form-row">
                               <li>
-                                <input type="radio" id="radio" name="group2" checked>
-                                <label for="radio">Понравилось</label>
+                                <input type="radio" id="radio4" name="group2" checked>
+                                <label for="radio4">Понравилось</label>
                               </li>
                               <li>
-                                <input type="radio" id="radio2" name="group2">
-                                <label for="radio2">Не понравилось</label>
+                                <input type="radio" id="radio3" name="group2">
+                                <label for="radio3">Не понравилось</label>
                               </li>
                             </ul>
                             <button class="btn large ye-btn" type="submit">Отправить</button>
