--- a/markup/homey-black-list-employee-personal.html
+++ b/markup/homey-black-list-employee-personal.html
@@ -161,7 +161,7 @@
                     <div><i class="icon-briefcase"></i><strong>Садовник/ Хозяйственник</strong></div>
                     <div><i class="icon-location ye-icon"></i><strong>Город проживания: </strong>Киев (Киевская область, Печерский)</div>
                     <div><i class="icon-location green"></i><strong>Город поиска работы: </strong>Киев</div>
-                    <div class="text-red"><i class="icon-frown"></i><strong>Причина занесения: </strong>непрофессионализм</div>
+                    <div class="status"><i class="icon-frown"></i><strong>Причина занесения: </strong>непрофессионализм</div>
                   </div>
                 </div>
                 <div class="pull-left">
@@ -189,43 +189,22 @@
                   </div>
                   <div class="row">
                     <div class="col-md-9">
-                      <h3>Добавить комментарий</h3>
+                      <h4><span>Добавить комментарий</span></h4>
                       <form action="#" class="comment-form">
                         <fieldset>
                           <div class="form-group">
                             <input type="text" placeholder="Ваше имя">
                           </div>
                           <div class="form-group">
-                            <input type="email" placeholder="Ваш e-mail">
-                            <span class="signature">*На сайте не публикуется</span>
-                          </div>
-                          <div class="form-group">
-                            <input type="text" placeholder="Пароль*">
-                            <span class="signature">*(Вы сможете пользоваться сайтом, используя указанный e-mail и пароль)</span>
-                          </div>
-                          <div class="form-group">
                             <textarea cols="5" rows="2" placeholder="Текст сообщения"></textarea>
                           </div>
-                          <div class="form-group">
-                            <h4>Ваш статус:</h4>
-                            <ul class="form-row">
-                              <li>
-                                <input type="radio" id="radio" name="group">
-                                <label for="radio">Соискатель</label>
-                              </li>
-                              <li>
-                                <input type="radio" id="radio2" name="group">
-                                <label for="radio2">Работодатели</label>
-                              </li>
-                            </ul>
-                            <button class="btn large ye-btn" type="submit">Отправить</button>
-                          </div>
+                          <button class="btn large ye-btn" type="submit">Отправить</button>
                         </fieldset>
                       </form>
                     </div>
                   </div>
                 </section>
-              </div>
+              </div> 
             </div>
           </div>
         </main>
