--- a/markup/homey-black-list-employee.html
+++ b/markup/homey-black-list-employee.html
@@ -258,7 +258,7 @@
                   <div class="info-list">
                     <div><i class="icon-briefcase"></i><strong>Садовник/ Хозяйственник</strong></div>
                     <div><i class="icon-location ye-icon"></i><strong>Город проживания: </strong>Киев (Киевская область, Печерский)</div>
-                    <div class="text-red"><i class="icon-frown"></i><strong>Причина занесения: </strong>непрофессионализм</div>
+                    <div class="status"><i class="icon-frown"></i><strong>Причина занесения: </strong>непрофессионализм</div>
                   </div>
                 </div>
                 <div class="pull-left">
@@ -278,7 +278,7 @@
                   <div class="info-list">
                     <div><i class="icon-briefcase"></i><strong>Няня</strong></div>
                     <div><i class="icon-location ye-icon"></i>Киев</div>
-                    <div class="text-red"><i class="icon-frown"></i><strong>Финансовая непорядочность</strong></div>
+                    <div class="status"><i class="icon-frown"></i><strong>Финансовая непорядочность</strong></div>
                   </div>
                 </div>
                 <div class="pull-left">
@@ -298,7 +298,7 @@
                   <div class="info-list">
                     <div><i class="icon-briefcase"></i><strong>Садовник/ Хозяйственник</strong></div>
                     <div><i class="icon-location ye-icon"></i><strong>Город проживания: </strong>Киев (Киевская область, Печерский)</div>
-                    <div class="text-red"><i class="icon-frown"></i><strong>Причина занесения: </strong>непрофессионализм</div>
+                    <div class="status"><i class="icon-frown"></i><strong>Причина занесения: </strong>непрофессионализм</div>
                   </div>
                 </div>
                 <div class="pull-left">
@@ -318,7 +318,7 @@
                   <div class="info-list">
                     <div><i class="icon-briefcase"></i><strong>Няня</strong></div>
                     <div><i class="icon-location ye-icon"></i>Киев</div>
-                    <div class="text-red"><i class="icon-frown"></i><strong>Финансовая непорядочность</strong></div>
+                    <div class="status"><i class="icon-frown"></i><strong>Финансовая непорядочность</strong></div>
                   </div>
                 </div>
                 <div class="pull-left">
