--- a/markup/homey-black-list-employer-personal(withoutautorization).html
+++ b/markup/homey-black-list-employer-personal(withoutautorization).html
@@ -161,7 +161,7 @@
                     <div><i class="icon-briefcase"></i><strong>Искал персонал: </strong>садовник/хозяйственник</div>
                     <div><i class="icon-location ye-icon"></i><strong>Город: </strong>Киев (Киевская область, Печерский)</div>
                     <div><i class="icon-location green"></i><strong>Город поиска работы: </strong>Киев</div>
-                    <div class="text-red"><i class="icon-frown"></i><strong>Причина занесения: </strong>непрофессионализм</div>
+                    <div class="status"><i class="icon-frown"></i><strong>Причина занесения: </strong>непрофессионализм</div>
                   </div>
                 </div>
                 <div class="pull-left">
@@ -189,7 +189,7 @@
                   </div>
                   <div class="row">
                     <div class="col-md-9">
-                      <h3>Добавить комментарий</h3>
+                      <h4><span>Добавить комментарий</span></h4>
                       <form action="#" class="comment-form">
                         <fieldset>
                           <div class="form-group">
@@ -210,7 +210,7 @@
                             <h4>Ваш статус:</h4>
                             <ul class="form-row">
                               <li>
-                                <input type="radio" id="radio" name="group">
+                                <input type="radio" id="radio" name="group" checked="">
                                 <label for="radio">Соискатель</label>
                               </li>
                               <li>
