--- a/markup/homey-black-list-employer.html
+++ b/markup/homey-black-list-employer.html
@@ -248,7 +248,7 @@
               <strong class="title2">Найдено: <span>1368 человек</span></strong>
               <div class="agent-block">
                 <div class="img-block">
-                  <img src="images/avatar.png" alt="image description">
+                  <img src="images/avatar.jpg" alt="image description">
                 </div>
                 <div class="text">
                   <div class="title-box">
@@ -268,7 +268,7 @@
               </div>
               <div class="agent-block">
                 <div class="img-block">
-                  <img src="images/avatar2.png" alt="image description">
+                  <img src="images/avatar2.jpg" alt="image description">
                 </div>
                 <div class="text">
                   <div class="title-box">
@@ -288,7 +288,7 @@
               </div>
               <div class="agent-block">
                 <div class="img-block">
-                  <img src="images/avatar.png" alt="image description">
+                  <img src="images/avatar.jpg" alt="image description">
                 </div>
                 <div class="text">
                   <div class="title-box">
@@ -308,7 +308,7 @@
               </div>
               <div class="agent-block">
                 <div class="img-block">
-                  <img src="images/avatar2.png" alt="image description">
+                  <img src="images/avatar2.jpg" alt="image description">
                 </div>
                 <div class="text">
                   <div class="title-box">
