--- a/markup/homey-employee-rezume(with-autorization).html
+++ b/markup/homey-employee-rezume(with-autorization).html
@@ -120,9 +120,14 @@
               <a href="#" class="btn blue">Разместить вакансию</a>
             </div>
             <div class="side-box">
-              <h3 class="text-center">Контактные данные</h3>
-              <p>Доступно еще 135 контактов</p>
-              <a href="#" class="btn ye-btn">Открыть</a>
+              <h3 class="text-center"><span>Контактные данные*</span></h3>
+              <address>
+                <div class="phone">
+                    <p><strong>Телефон:</strong></p>
+                    <p><a href="tel:7-917-00-00-000">+7 (917) 00-00-000</a></p>
+                    <p><a href="tel:7-917-00-00-000">+7 (917) 00-00-000</a></p>
+                </div>
+              </address>
             </div>
             <div class="side-box">
               <h3 class="text-center">Действия</h3>
