--- a/markup/home-agency.html
+++ b/markup/home-agency.html
@@ -130,7 +130,52 @@
             <div class="side-box text-left">
               <h3>Заявка на поиск персонала в агентство</h3>
               <p>Нет времени искать песронал самому? Подайте заявку в агентство </p>
-              <a href="#" class="btn ye-btn">Подать заявку</a>
+              <a href="#" class="btn blue" data-toggle="modal" data-target="#myModal4">Подать заявку</a>
+              <div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+                    </div>
+                    <div class="modal-body modal2">
+                      <h4>Заявка на подбор персонала</h4>
+                      <p>Вам срочно нужен помощник по дому? Заполните онлайн-заявку, чтобы отправить ее всем рекомендованным агентствам сразу. Вы экономите время, так как вам не прийдется звонить во все агентства по отдельности. После ее получения, специалисты агентств свяжутся с вами для обсуждения деталей заказа</p>
+                      <div class="row">
+                        <div class="col-md-8">
+                          <label for="label1">Имя и фамилия</label>
+                          <div class="form-group">
+                            <input id="label1" type="text" placeholder="Имя и фамилия">
+                          </div>
+                          <label for="label2">Контактный телефон</label>
+                          <div class="form-group">
+                            <input id="label2" type="tel" placeholder="+38  (___) __-__-___">
+                          </div>
+                          <label for="label3">E-mail</label>
+                          <div class="form-group">
+                            <input id="label3" type="email" placeholder="E-mail">
+                          </div>
+                          <div class="form-group">
+                            <label>Какой персонал Вам нужен?</label>
+                            <select>
+                              <option>Выберите персонал</option>
+                              <option>Выберите персонал</option>
+                              <option>Выберите персонал</option>
+                              <option>Выберите персонал</option>
+                            </select>
+                          </div>
+                        </div>
+                      </div>
+                      <label for="label4">Дополнительное описание</label>
+                      <div class="form-group">
+                        <textarea id="label4" cols="3" rows="2" placeholder="Опишите свои требования, предъявляемые к персоналу"></textarea>
+                      </div>
+                      <div class="modal-footer">
+                        <button class="btn pull-right blue" type="submit">Отправить</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="side-box">
               <div class="box">
@@ -444,8 +489,7 @@
             <div class="text-info">
               <h2>Большой выбор работы в Киеве </h2>
               <p>Ежедневно в Киеве осуществляются тысячи пассажирских перевозок: регулярных, специальных, разовых. Актуальность услуги всегда высокая, поэтому количество предложений на этом рынке достаточно большое. Остается лишь одна проблема: как заказать пассажирские перевозки в Киеве на выгодных условиях, чтобы стоимость и качество соответствовали ожиданиям?</p>
-              <p>Лучший выход из ситуации – заказ перевозки напрямую у исполнителя (водителя или транспортной компании). Для понимания ситуации, следует знать, что в нашей стране пассажирские перевозки официально делят на:
-  регулярные – курсирование транспорта по утвержденным маршрутам с согласованным графиком движения; егулярные специальные</p>
+              <p>Лучший выход из ситуации – заказ перевозки напрямую у исполнителя (водителя или транспортной компании). Для понимания ситуации, следует знать, что в нашей стране пассажирские перевозки официально делят на: регулярные – курсирование транспорта по утвержденным маршрутам с согласованным графиком движения; егулярные специальные</p>
             </div>
           </div>
         </main>
@@ -544,7 +588,6 @@
     <script src="js/jquery-1.11.2.min.js" type="text/javascript"></script>
     <script src="js/jquery.main.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="js/masonry-docs.min.js" type="text/javascript"></script>
     <script type="text/javascript">
       if (navigator.userAgent.match(/IEMobile/10.0/)  navigator.userAgent.match(/MSIE 10.*Touch/)) {
       var msViewportStyle = document.createElement('style')
