--- a/markup/home-article.html
+++ b/markup/home-article.html
@@ -81,30 +81,34 @@
                   <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
-                  <h4 class="text-center">Вход на сайт</h4>
-                  <div class="modal-form">
-                    <div class="form-group">
-                      <input type="email" placeholder="E-mail">
-                    </div>
-                    <div class="form-group">
-                      <input type="password" placeholder="Пароль">
-                    </div>
-                    <div class="form-group checkbox">
-                      <input id="remember" type="checkbox" checked>
-                      <label for="remember">Запомнить меня</label>
-                    </div>
-                    <div class="form-group">
-                      <button class="btn large" type="submit">Войти</button>
-                    </div>
-                    <div class="form-group">
-                      <div class="pull-left">
-                        <a href="#">Забыли пароль?</a>
+                  <form action="#">
+                    <fieldset>
+                      <h4 class="text-center">Вход на сайт</h4>
+                      <div class="modal-form">
+                        <div class="form-group">
+                          <input type="email" placeholder="E-mail">
+                        </div>
+                        <div class="form-group">
+                          <input type="password" placeholder="Пароль">
+                        </div>
+                        <div class="form-group checkbox">
+                          <input id="remember" type="checkbox" checked>
+                          <label for="remember">Запомнить меня</label>
+                        </div>
+                        <div class="form-group">
+                          <button class="btn large" type="submit">Войти</button>
+                        </div>
+                        <div class="form-group">
+                          <div class="pull-left">
+                            <a href="#">Забыли пароль?</a>
+                          </div>
+                          <div class="pull-right">
+                            <a href="#">Еще не зарегистрированы?</a>
+                          </div>
+                        </div>
                       </div>
-                      <div class="pull-right">
-                        <a href="#">Еще не зарегистрированы?</a>
-                      </div>
-                    </div>
-                  </div>
+                    </fieldset>
+                  </form>
                 </div>
               </div>
             </div>
@@ -259,8 +263,8 @@
                   </div>
                   <div class="row">
                     <div class="col-md-9">
-                      <h3>Добавить комментарий</h3>
                       <form action="#" class="comment-form">
+                        <h3>Добавить комментарий</h3>
                         <fieldset>
                           <div class="form-group">
                             <input type="text" placeholder="Ваше имя">
@@ -401,7 +405,6 @@
     <script src="js/jquery-1.11.2.min.js" type="text/javascript"></script>
     <script src="js/jquery.main.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="js/masonry-docs.min.js" type="text/javascript"></script>
     <script type="text/javascript">
       if (navigator.userAgent.match(/IEMobile/10.0/)  navigator.userAgent.match(/MSIE 10.*Touch/)) {
       var msViewportStyle = document.createElement('style')
