--- a/markup/home-password-popup.html
+++ b/markup/home-password-popup.html
@@ -82,14 +82,18 @@
                 </div>
                 <div class="modal-body">
                   <div class="modal-form">
-                    <h4 class="text-center">Восстановление пароля</h4>
-                    <p class="text-center">Введите e-mail, указанный при регистрации. Мы вышем на него письмо со ссылкой для восстановления пароля</p>
-                    <div class="form-group">
-                      <input type="email" placeholder="E-mail">
-                    </div>
-                    <div class="form-group">
-                      <button class="btn large" type="submit">Подтвердить</button>
-                    </div>
+                     <form action="#">
+                      <fieldset>
+                        <h4 class="text-center">Восстановление пароля</h4>
+                        <p class="text-center">Введите e-mail, указанный при регистрации. Мы вышем на него письмо со ссылкой для восстановления пароля</p>
+                        <div class="form-group">
+                          <input type="email" placeholder="E-mail">
+                        </div>
+                        <div class="form-group">
+                          <button class="btn large" type="submit">Подтвердить</button>
+                        </div>
+                      </fieldset>
+                     </form>
                   </div>
                 </div>
               </div>
@@ -480,7 +484,6 @@
     <script src="js/jquery-1.11.2.min.js" type="text/javascript"></script>
     <script src="js/jquery.main.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="js/masonry-docs.min.js" type="text/javascript"></script>
     <script type="text/javascript">
       if (navigator.userAgent.match(/IEMobile/10.0/)  navigator.userAgent.match(/MSIE 10.*Touch/)) {
       var msViewportStyle = document.createElement('style')
