--- a/markup/homey-employee-rezume(without-autorization).html
+++ b/markup/homey-employee-rezume(without-autorization).html
@@ -73,7 +73,7 @@
               </ul>
             </nav>
           </div>
-          <button type="button" class="btn pull-right" data-toggle="modal" data-target="#myModal">Личный кабинет</button>
+          <button type="button" class="btn pull-right" data-toggle="modal" data-target="#myModal">Войти</button>
           <div class="modal fade modal-size2" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
@@ -121,8 +121,8 @@
             </div>
             <div class="side-box">
               <h3 class="text-center">Контактные данные</h3>
-              <p>Доступно еще 135 контактов</p>
-              <a href="#" class="btn ye-btn">Открыть</a>
+              <p>Контакты видны только зарегистрированным пользователям. Войдите в личный кабинет или зарегистрируйтесь</p>
+              <a href="#" class="btn green">Зарегистрироваться</a>
             </div>
             <div class="side-box">
               <h3 class="text-center">Действия</h3>
