added some files

--- a/markup/home.html
+++ b/markup/home.html
@@ -17,13 +17,13 @@
             <div class="logo-box">
               <a href="#"><img alt="honey" src="images/logo.png"></a>
               <button type="button" class="country" data-toggle="modal" data-target="#myModal3">
-                <div class="img-box">
+                <span class="img-box">
                   <img src="images/ukr.png" alt="image description">
-                </div>
+                </span>
                 <span class="name">Украина</span>
                 <i class="icon-down-open"></i>
               </button>
-              <div class="modal fade modal-size2" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal fade modal-size2" id="myModal3" tabindex="-1" role="dialog"  >
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
                     <div class="modal-header">
@@ -35,22 +35,22 @@
                           <ul class="country-list">
                             <li>
                               <label for="ukraine">
-                                <div class="img-box">
+                                <span class="img-box">
                                   <img src="images/ukraine.png" alt="ukraine">
-                                </div>
-                                <div>
+                                </span>
+                                <span>
                                   <input id="ukraine" type="radio" name="group" checked>
                                       Украина
-                                </div>
+                                </span>
                               </label>
                             </li>
                             <li>
                               <label for="russian">
                                 <img src="images/russian.png" alt="russian">
-                                <div>
+                                <span>
                                   <input id="russian" type="radio" name="group">
                                       Россия
-                                </div>
+                                </span>
                               </label>
                             </li>
                           </ul>
@@ -74,7 +74,7 @@
             </nav>
           </div>
           <button type="button" class="btn pull-right" data-toggle="modal" data-target="#myModal">Войти</button>
-          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog"  >
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
@@ -466,7 +466,7 @@
               </li>
             </ul>
             <button type="button" class="btn empty" data-toggle="modal" data-target="#myModal2">Помощь</button>
-            <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal fade" id="myModal2" tabindex="-1" role="dialog"  >
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
