--- a/markup/homey-black-list-employer-personal(withautorization).html
+++ b/markup/homey-black-list-employer-personal(withautorization).html
@@ -17,13 +17,13 @@
             <div class="logo-box">
               <a href="#"><img alt="honey" src="images/logo.png"></a>
               <button type="button" class="country" data-toggle="modal" data-target="#myModal3">
-                <div class="img-box">
+                <span class="img-box">
                   <img src="images/ukr.png" alt="image description">
-                </div>
+                </span>
                 <span class="name">Украина</span>
                 <i class="icon-down-open"></i>
               </button>
-              <div class="modal fade modal-size2" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal fade modal-size2" id="myModal3" tabindex="-1" role="dialog"  >
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
                     <div class="modal-header">
@@ -35,22 +35,22 @@
                           <ul class="country-list">
                             <li>
                               <label for="ukraine">
-                                <div class="img-box">
+                                <span class="img-box">
                                   <img src="images/ukraine.png" alt="ukraine">
-                                </div>
-                                <div>
+                                </span>
+                                <span>
                                   <input id="ukraine" type="radio" name="group" checked>
                                       Украина
-                                </div>
+                                </span>
                               </label>
                             </li>
                             <li>
                               <label for="russian">
                                 <img src="images/russian.png" alt="russian">
-                                <div>
+                                <span>
                                   <input id="russian" type="radio" name="group">
                                       Россия
-                                </div>
+                                </span>
                               </label>
                             </li>
                           </ul>
@@ -74,7 +74,7 @@
             </nav>
           </div>
           <button type="button" class="btn pull-right" data-toggle="modal" data-target="#myModal">Личный кабинет</button>
-          <div class="modal fade modal-size2" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal fade modal-size2" id="myModal" tabindex="-1" role="dialog"  >
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
@@ -125,7 +125,7 @@
               <h3>Был негативный опыт с работодателем?</h3>
               <p>Добавьте его данные в черный список.</p>
               <a href="#" class="btn red" data-toggle="modal" data-target="#myModal4">Добавить работодателя</a>
-              <div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal fade" id="myModal4" tabindex="-1" role="dialog"  >
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
                     <div class="modal-header">
@@ -231,9 +231,9 @@
                             <textarea id="label4" cols="3" rows="2" placeholder="Опишите подробнее, почему вас не устроило сотрудничество"></textarea>
                           </div>
                           <div class="form-frame">
-                            <label for="label4">Контакты оставившего отзыв</label>
+                            <label for="label5">Контакты оставившего отзыв</label>
                             <div class="form-group">
-                              <textarea class="textarea2" id="label4" cols="3" rows="2" placeholder="Укажите ваше имя, телефон или e-mail"></textarea>
+                              <textarea class="textarea2" id="label5" cols="3" rows="2" placeholder="Укажите ваше имя, телефон или e-mail"></textarea>
                             </div>
                           </div>
                           <div class="form-group">
@@ -384,7 +384,7 @@
               </li>
             </ul>
             <button type="button" class="btn empty" data-toggle="modal" data-target="#myModal2">Помощь</button>
-            <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal fade" id="myModal2" tabindex="-1" role="dialog"  >
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
